[package]
name = "xmr-x402-facilitator"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
dashmap = "6.1.0"
dotenvy = "0.15.7"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros"] }
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
uuid = { version = "1.19.0", features = ["v4"] }
